@@ -6,7 +6,7 @@
     "major_version": 1,
     "minor_version": 0,
     "generator_name": "crystal-facet-uml",
-    "generator_version": "1.37.0"
+    "generator_version": "1.38.0-pre"
   }
   ,
   "views":
